@@ -4,9 +4,13 @@ package com.baeldung.resultset2json;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.sql.ResultSet;
+import java.sql.ResultSetMetaData;
 import java.sql.SQLException;
+import java.sql.Statement;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
+
 import org.jooq.Record;
 import org.jooq.RecordMapper;
 import org.jooq.impl.DSL;
@@ -19,20 +23,20 @@ public class ResultSet2JSON {
 
   public static void main(String... args) throws ClassNotFoundException, SQLException {
 
-    var testClass = new ResultSet2JSON();
+     ResultSet2JSON testClass = new ResultSet2JSON();
     testClass.testMethod1();
   }
 
   public void testMethod1() throws ClassNotFoundException, SQLException {
     Class.forName("org.h2.Driver");
-    var dbConnection = DriverManager.getConnection("jdbc:h2:mem:rs2jdbc", "user", "password"); 
+    Connection dbConnection = DriverManager.getConnection("jdbc:h2:mem:rs2jdbc", "user", "password"); 
 
     // Create a table
-    var stmt = dbConnection.createStatement();
-    stmt.execute("CREATE TABLE words AS SELECT * FROM './example.csv'");
+    Statement stmt = dbConnection.createStatement();
+    stmt.execute("CREATE TABLE words AS SELECT * FROM CSVREAD('./example.csv')");
     ResultSet resultSet = stmt.executeQuery("SELECT * FROM words");
 
-    var result1 = resultSet2JdbcMethod1(resultSet);
+    JSONArray result1 = resultSet2JdbcMethod1(resultSet);
     System.out.println(result1.toString());
 
     resultSet.close();
@@ -40,15 +44,15 @@ public class ResultSet2JSON {
 
   public void testMethod2() throws ClassNotFoundException, SQLException {
     Class.forName("org.h2.Driver");
-    var dbConnection = DriverManager.getConnection("jdbc:h2:mem:rs2jdbc", "user", "password"); 
+     Connection dbConnection = DriverManager.getConnection("jdbc:h2:mem:rs2jdbc", "user", "password"); 
     // Create a table
-    var stmt = dbConnection.createStatement();
+    Statement stmt = dbConnection.createStatement();
     stmt.execute(
         "CREATE TABLE words AS SELECT * FROM CSVREAD('./example.csv')"); // See
                                                                 // https://duckdb.org/docs/data/csv
     ResultSet resultSet = stmt.executeQuery("SELECT * FROM words");
 
-    var result1 = resultSet2JdbcMethod2(resultSet, dbConnection);
+    JSONObject result1 = resultSet2JdbcMethod2(resultSet, dbConnection);
     System.out.println(result1.toString());
 
     resultSet.close();
@@ -56,21 +60,21 @@ public class ResultSet2JSON {
 
   public void testMethod3() throws ClassNotFoundException, SQLException {
     Class.forName("org.h2.Driver");
-    var dbConnection = DriverManager.getConnection("jdbc:h2:mem:rs2jdbc", "user", "password"); 
+    Connection dbConnection = DriverManager.getConnection("jdbc:h2:mem:rs2jdbc", "user", "password"); 
     // Create a table
-    var stmt = dbConnection.createStatement();
-    stmt.execute("CREATE TABLE words AS SELECT * FROM './example.csv'");
+    Statement stmt = dbConnection.createStatement();
+    stmt.execute("CREATE TABLE words AS SELECT * FROM CSVREAD('./example.csv')");
     ResultSet resultSet = stmt.executeQuery("SELECT * FROM words");
 
-    var result1 = resultSet2JdbcMethod3(resultSet, dbConnection);
+    JSONArray result1 = resultSet2JdbcMethod3(resultSet, dbConnection);
     System.out.println(result1.toString());
 
     resultSet.close();
   }
 
   private static JSONArray resultSet2JdbcMethod1(ResultSet resultSet) throws SQLException {
-    var md = resultSet.getMetaData();
-    var numCols = md.getColumnCount();
+    ResultSetMetaData md = resultSet.getMetaData();
+    int numCols = md.getColumnCount();
     List<String> colNames =
         IntStream.range(0, numCols)
             .mapToObj(
@@ -83,11 +87,11 @@ public class ResultSet2JSON {
                     return "?";
                   }
                 })
-            .toList();
+            .collect(Collectors.toList());
 
-    var result = new JSONArray();
+    JSONArray result = new JSONArray();
     while (resultSet.next()) {
-      var row = new JSONObject();
+      JSONObject row = new JSONObject();
       colNames.forEach(
           cn -> {
             try {
@@ -109,8 +113,8 @@ public class ResultSet2JSON {
 
   private static JSONArray resultSet2JdbcMethod3(ResultSet resultSet, Connection dbConnection)
       throws SQLException {
-    var md = resultSet.getMetaData();
-    var numCols = md.getColumnCount();
+     ResultSetMetaData md = resultSet.getMetaData();
+     int numCols = md.getColumnCount();
     List<String> colNames =
         IntStream.range(0, numCols)
             .mapToObj(
@@ -123,21 +127,20 @@ public class ResultSet2JSON {
                     return "?";
                   }
                 })
-            .toList();
+            .collect(Collectors.toList());
 
-    var json =
-        DSL.using(dbConnection)
-            .fetch(resultSet)
-            .map(
-                new RecordMapper<Record, JSONObject>() {
+    List<JSONObject> json = DSL.using(dbConnection)
+        .fetch(resultSet)
+        .map(
+            new RecordMapper<Record, JSONObject>() {
 
-                  @Override
-                  public JSONObject map(Record r) {
-                    var obj = new JSONObject();
-                    colNames.forEach(cn -> obj.put(cn, r.get(cn)));
-                    return obj;
-                  }
-                });
+              @Override
+              public JSONObject map(Record r) {
+                JSONObject obj = new JSONObject();
+                colNames.forEach(cn -> obj.put(cn, r.get(cn)));
+                return obj;
+              }
+            });
     return new JSONArray(json);
   }
 }
